fix contact page overflow

--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -459,7 +459,7 @@ nav #navToggle {
   margin: 0.5rem 3rem;
   text-align: center;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   #contact .container {
     display: grid;
     margin: 0;
@@ -539,7 +539,7 @@ footer {
   opacity: 0;
   pointer-events: none;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 800px) {
   #modal section {
     padding: 1.5rem 5%;
   }
