--- a/src/assets/style/sections/_contact.scss
+++ b/src/assets/style/sections/_contact.scss
@@ -130,7 +130,7 @@
       text-align: center;
     }
   }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 800px) {
     .container {
       display: grid;
       margin: 0;
